*SVN*

* Support nil and Array in :conditions => { attr => value } hashes.  #6548 [Assaf, Jeremy Kemper]
    find(:all, :conditions => { :topic_id => [1, 2, 3], :last_read => nil }

* Consistently use LOWER() for uniqueness validations (rather than mixing with UPPER()) so the database can always use a functional index on the lowercased column.  #6495 [Si]

* SQLite: fix calculations workaround, remove count(distinct) query rewrite, cleanup test connection scripts.  [Jeremy Kemper]

* SQLite: count(distinct) queries supported in >= 3.2.6.  #6544 [Bob Silva]

* Dynamically generate reader methods for serialized attributes.  #6362 [Stefan Kaes]

* Deprecation: object transactions warning.  [Jeremy Kemper]

* has_one :dependent => :nullify ignores nil associates.  #6528 [janovetz, Jeremy Kemper]

* Oracle: resolve test failures, use prefetched primary key for inserts, check for null defaults. Factor out some common methods from all adapters.  #6515 [Michael Schoen]

* Make add_column use the options hash with the Sqlite Adapter. Closes #6464 [obrie]

* Document other options available to migration's add_column. #6419 [grg]

* MySQL: all_hashes compatibility with old MysqlRes class.  #6429 [Jeremy Kemper]

* Fix has_many :through to add the appropriate conditions when going through an association using STI. Closes #5783. [Jonathan Viney]

* fix select_limited_ids_list issues in postgresql, retain current behavior in other adapters [Rick]

* Restore eager condition interpolation, document it's differences [Rick]

* Don't rollback in teardown unless a transaction was started. Don't start a transaction in create_fixtures if a transaction is started.  #6282 [Jacob Fugal, Jeremy Kemper]

* Add #delete support to has_many :through associations.  Closes #6049 [Martin Landers]

* Reverted old select_limited_ids_list postgresql fix that caused issues in mysql.  Closes #5851 [Rick]
